# pysideProject

./: docker-compose.yaml  main.py  pyproject.toml
backend/: Dockerfile  main.py  pyproject.toml
